syntax = "proto3";

package tenant;

option go_package = "github.com/vhvplatform/go-tenant-service/proto";

import "google/api/annotations.proto";

// TenantService provides tenant management functionality
service TenantService {
  rpc GetTenant(GetTenantRequest) returns (GetTenantResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}"
    };
  }
  rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants"
    };
  }
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse) {
    option (google.api.http) = {
      post: "/api/v1/tenants"
      body: "*"
    };
  }
  rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse) {
    option (google.api.http) = {
      put: "/api/v1/tenants/{tenant_id}"
      body: "*"
    };
  }
  rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse) {
    option (google.api.http) = {
      delete: "/api/v1/tenants/{tenant_id}"
    };
  }
  rpc AddUserToTenant(AddUserToTenantRequest) returns (AddUserToTenantResponse) {
    option (google.api.http) = {
      post: "/api/v1/tenants/{tenant_id}/users"
      body: "*"
    };
  }
  rpc RemoveUserFromTenant(RemoveUserFromTenantRequest) returns (RemoveUserFromTenantResponse) {
    option (google.api.http) = {
      delete: "/api/v1/tenants/{tenant_id}/users/{user_id}"
    };
  }

  rpc GetTenantConfig(GetTenantConfigRequest) returns (GetTenantConfigResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}/config"
    };
  }

  rpc UpdateTenantConfig(UpdateTenantConfigRequest) returns (UpdateTenantConfigResponse) {
    option (google.api.http) = {
      put: "/api/v1/tenants/{tenant_id}/config"
      body: "*"
    };
  }

  rpc GetDefaultService(GetDefaultServiceRequest) returns (GetDefaultServiceResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}/default-service"
    };
  }

  // Service Registry RPCs
  rpc GetServiceConfig(GetServiceConfigRequest) returns (GetServiceConfigResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}/services/{service_name}/config"
    };
  }

  rpc UpdateServiceConfig(UpdateServiceConfigRequest) returns (UpdateServiceConfigResponse) {
    option (google.api.http) = {
      put: "/api/v1/tenants/{tenant_id}/services/{service_name}/config"
      body: "*"
    };
  }

  rpc GetServiceURL(GetServiceURLRequest) returns (GetServiceURLResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}/services/{service_name}/url"
    };
  }

  rpc ListTenantServices(ListTenantServicesRequest) returns (ListTenantServicesResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}/services"
    };
  }

  rpc GetServiceHealth(GetServiceHealthRequest) returns (GetServiceHealthResponse) {
    option (google.api.http) = {
      get: "/api/v1/tenants/{tenant_id}/services/{service_name}/health"
    };
  }
}

message GetTenantRequest {
  string tenant_id = 1;
}

message GetTenantResponse {
  Tenant tenant = 1;
}

message ListTenantsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListTenantsResponse {
  repeated Tenant tenants = 1;
  int32 total = 2;
}

message CreateTenantRequest {
  string name = 1;
  string domain = 2;
  string subscription_tier = 3;
}

message CreateTenantResponse {
  Tenant tenant = 1;
}

message UpdateTenantRequest {
  string tenant_id = 1;
  string name = 2;
  string domain = 3;
  string subscription_tier = 4;
}

message UpdateTenantResponse {
  Tenant tenant = 1;
}

message DeleteTenantRequest {
  string tenant_id = 1;
}

message DeleteTenantResponse {
  bool success = 1;
}

message AddUserToTenantRequest {
  string tenant_id = 1;
  string user_id = 2;
  string role = 3;
}

message AddUserToTenantResponse {
  bool success = 1;
}

message RemoveUserFromTenantRequest {
  string tenant_id = 1;
  string user_id = 2;
}

message RemoveUserFromTenantResponse {
  bool success = 1;
}

message Tenant {
  string id = 1;
  string name = 2;
  string domain = 3;
  string subscription_tier = 4;
  bool is_active = 5;
  string created_at = 6;
  string updated_at = 7;
  TenantConfig config = 8;
}

message TenantConfig {
  string default_service_url = 1;
  map<string, string> service_mappings = 2; // e.g., {"user": "user-service:50052"}
  repeated string fallback_chain = 3; // e.g., ["tenant-dashboard", "cms", "auth-login"]
  repeated string allowed_login_identifiers = 4; // ["email", "phone", "username", "document_number"]
  bool require_2fa = 5;
  bool allow_registration = 6;
  string custom_logo_url = 7;
  string custom_background_url = 8;
  map<string, string> custom_settings = 9;
}

message GetTenantConfigRequest {
  string tenant_id = 1;
}

message GetTenantConfigResponse {
  TenantConfig config = 1;
}

message UpdateTenantConfigRequest {
  string tenant_id = 1;
  TenantConfig config = 2;
}

message UpdateTenantConfigResponse {
  TenantConfig config = 1;
}

message GetDefaultServiceRequest {
  string tenant_id = 1;
}

message GetDefaultServiceResponse {
  string default_service_url = 1;
  repeated string fallback_urls = 2;
}

// Service Registry Messages
message GetServiceConfigRequest {
  string tenant_id = 1;
  string service_name = 2;
}

message GetServiceConfigResponse {
  ServiceConfig config = 1;
}

message UpdateServiceConfigRequest {
  string tenant_id = 1;
  string service_name = 2;
  ServiceConfig config = 3;
}

message UpdateServiceConfigResponse {
  ServiceConfig config = 1;
}

message GetServiceURLRequest {
  string tenant_id = 1;
  string service_name = 2;
}

message GetServiceURLResponse {
  string url = 1;
  bool is_default = 2;
  bool success = 3;
  string error = 4;
  repeated string attempted_urls = 5;
}

message ListTenantServicesRequest {
  string tenant_id = 1;
}

message ListTenantServicesResponse {
  repeated ServiceConfig services = 1;
}

message GetServiceHealthRequest {
  string tenant_id = 1;
  string service_name = 2;
}

message GetServiceHealthResponse {
  repeated ServiceHealth healths = 1;
}

message ServiceConfig {
  string id = 1;
  string tenant_id = 2;
  string service_name = 3;
  ServiceEndpoint primary_endpoint = 4;
  repeated ServiceEndpoint fallback_chain = 5;
  string default_service_url = 6;
  HealthCheckConfig health_check = 7;
  string load_balance_strategy = 8;
  bool is_active = 9;
  map<string, string> metadata = 10;
  string created_at = 11;
  string updated_at = 12;
}

message ServiceEndpoint {
  string url = 1;
  int32 priority = 2;
  int32 weight = 3;
  int32 timeout = 4;
  map<string, string> headers = 5;
  bool is_active = 6;
}

message HealthCheckConfig {
  bool enabled = 1;
  string path = 2;
  string method = 3;
  int32 interval = 4;
  int32 timeout = 5;
  int32 fail_threshold = 6;
}

message ServiceHealth {
  string endpoint_url = 1;
  bool is_healthy = 2;
  string last_checked = 3;
  string last_successful = 4;
  string last_failure = 5;
  int32 consecutive_fails = 6;
  string last_error = 7;
}
